# social_network_2

./: Dockerfile  Makefile  README.md  base.py  database.py  docker-compose.yml  main.py  pyproject.toml
.envs/: .env.py  dev.env
alembic/versions/: f1d1922070b5_add_users.py
migration/: env.py
migrations/: env.py
migrations/versions/: 681fc1f09151_phone_number.py  b2ef74daeaf7_post_user.py
src/controllers/: auth.py  avatar.py  post.py
src/core/: config.py
src/models/: post.py  user.py
src/repositories/: auth.py  base_repository.py
src/schemas/: auth.py  post.py
src/services/: auth.py  post.py  responses.py
src/shared/: exeptions.py
