[tool.poetry]
name = "social_network_2"
version = "0.1.0"
description = ""
authors = ["Smirnova Tanya <75753895+SmirnovaT@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.89.1"
SQLAlchemy = "^2.0.0"
uvicorn = "^0.20.0"
alembic = "^1.9.2"
psycopg2 = "^2.9.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
